# tizen_emotion

./: configure.ac
m4/: emotion_check.m4
packaging/: emotion.spec
src/edje_external/: emotion.c
src/lib/: Makefile.am  emotion_smart.c
src/modules/: Makefile.am
src/modules/libvlc/: Makefile.am  emotion_libvlc.c
